# damml

./: CMakeLists.txt
examples/mnist/: CMakeLists.txt  mnist_example.cpp
src/: CMakeLists.txt  damml.h  damml.hpp
src/nn/: CMakeLists.txt  linear.h  linear_test.cpp  module.h
src/tensor/: CMakeLists.txt  function.h  function.hpp  tensor.cpp  tensor.h  tensor.hpp  tensor_exception.h  tensor_test.cpp
src/testing/: testing.h
src/util/: util.h
